# chaos-framework

./: Cargo.toml  README.md  imgui.ini
assets/models/: senhora.mtl  untitled.mtl
examples/: cull.rs  framebuffer.rs  ik.rs  simple2d.rs  trail.rs
src/: lib.rs  main.rs
src/events/: event_handler.rs  event_loop.rs  mod.rs
src/graphics/: SHADERS.rs  animation.rs  camera.rs  framebuffer.rs  light.rs  macro.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shader.rs  skeletal_mesh.rs  texture.rs  trail.rs  vertex.rs
src/ui/: mod.rs  renderer.rs  ui.rs
src/util/: culler.rs  math.rs  mod.rs  shapes.rs
